style: overflow and perspective decoration

--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,12 @@ body {
   padding: 0;
   border: 0;
 }
+
+.perspective-decoration {
+  color: "red";
+  background-color: hsl(195deg, 20%, 86%);
+  width: 100%;
+  height: 40%;
+  position: fixed;
+  bottom: 0;
+}
